# EzyAssistanceSS-N

./: .gitignore  ADBClass.py  ASSETS.md  OCRClass.py  OctoUtil.py  README.md  active_config.yaml  app_config.yaml  main.py  pyproject.toml
.cursor/plans/: 新版模拟器适配_128a6ff6.plan.md
Nodes/: ADBNodes.py
configs/: config.yaml
logs/: log_test.txt
workflow/: MainMaterial.py  ReceiveReward.py  StartApp.py  WeekTower.py
